--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
 
 
   backend:
-    build: ./backend
+    build: ./backend/Dockerfile.dev
     ports:
       - "8080:8080"
     command: npm run dev
